Removed issues without a JIRA link